# dsp-exercises

./: LICENSE  README.md  pyproject.toml
assignments/: 0_setup.ipynb  1_fft.ipynb  2_filters.ipynb  3_2d_filters.ipynb  4_sampling.ipynb  5_quantisation.ipynb
